test/negative/feature_array_suffix.java

public class feature_array_suffix {
  public feature_array_suffix() {}
  protected int x[];
}

